--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,30 @@
           </a>
         </div>
       </div>
+
+
+      <div class="card">
+        <div class="card-body">
+          <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+            <i class="fab fa-google"></i>
+            Sign In with Facebook
+          </a>
+        </div>
+      </div>
+
+
+
     </div>
+
+
+
+
+
+
+
+
+
+
 
   </div>
 </div>
